@@ -4,7 +4,7 @@
 setClass(Class = "mlwinfitIGLS", representation = representation(Nobs="numeric",DataLength="numeric",
                                                                  D="ANY", Formula="ANY", levID="character", estIGLS ="data.frame",
                                                                  FP="numeric", RP="numeric", RP.cov="matrix", FP.cov="matrix", LIKE="ANY",
-                                                                 elapsed.time="numeric", call="ANY",residual="data.frame", Converged="logical", Iterations="numeric"))
+                                                                 elapsed.time="numeric", call="ANY",residual="data.frame", Converged="logical", Iterations="numeric", Meth="numeric"))
 
 # extract parts of mlwinfitIGLS
 #
@@ -32,6 +32,7 @@ setMethod(
     if(i=="LIKE"){return(x@LIKE)}else {}
     if(i=="Converged"){return(x@Converged)}else {}
     if(i=="Iterations"){return(x@Iterations)}else {}
+    if(i=="Meth"){return(x@Meth)}else {}
     #                if(i=="chains.bugs"){return(x@chains.bugs)}else {}
     if(i=="residual"){return(x@residual)}else {}
   }
@@ -62,6 +63,7 @@ setMethod(
     if(i=="LIKE"){return(x@LIKE)}else {}
     if(i=="Converged"){return(x@Converged)}else {}
     if(i=="Iterations"){return(x@Iterations)}else {}
+    if(i=="Meth"){return(x@Meth)}else {}
     if(i=="residual"){return(x@residual)}else {}
   }
 )
@@ -91,6 +93,7 @@ setReplaceMethod(
     if(i=="LIKE"){x@LIKE<-value}else {}
     if(i=="Converged"){x@Converged<-value}else {}
     if(i=="Iterations"){x@Iterations<-value}else {}
+    if(i=="Meth"){x@Meth<-value}else {}
     if(i=="residual"){x@residual<-value}else {}
     validObject(x)
     return (x)
@@ -121,6 +124,7 @@ setReplaceMethod(
     if(i=="LIKE"){x@LIKE<-value}else {}
     if(i=="Converged"){x@Converged<-value}else {}
     if(i=="Iterations"){x@Iterations<-value}else {}
+    if(i=="Meth"){x@Meth<-value}else {}
     if(i=="residual"){x@residual<-value}else {}
     validObject(x)
     return (x)
@@ -190,7 +194,13 @@ printIGLS <- function(x, digits = max(3, getOption("digits") - 2), signif.stars 
   cat("\n")
   cat(paste(rep("-",50),collapse="*"),"\n")
   cat("MLwiN multilevel model",paste("(",object@D[1],")",sep=""),"\n")
-  cat("Estimation algorithm:  IGLS        Elapsed time :",paste(round(object@elapsed.time,2),"s",sep=""), "\n")
+  cat("Estimation algorithm:  ")
+  if (object@Meth==1) {
+    cat("IGLS")
+  } else {
+    cat("RIGLS")
+  }
+  cat("        Elapsed time :",paste(round(object@elapsed.time,2),"s",sep=""), "\n")
   cat("Number of obs: ",object@Nobs,"(from total",object@DataLength,")")
   if (object@Converged) {
     cat("        The model converged after", object@Iterations, "iterations.\n")
