@@ -5,6 +5,7 @@ Mon Jun 30 2014
    * Allow single-level binomial/Poisson/negative binomial models to be fitted
    * Fix output when Std. Err. is zero (for example if a parameter is collinear)
    * Fix reported number of observations and observations in use
+   * If RIGLS is specified as the estimation method correctly reflect this in the model output
 
 2. Changes
    * Enabled matching starting values on parameter names (allowing subsets of parameters to be specified)
